--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,2 @@
-{{title$ | async}}
-<button (click)="marathiMsg()">marathiMsg</button>
-<button (click)="englishMsg()">englishMsg</button>
+{{title}}
 
