--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,3 +2,4 @@
 
 <button (click)="spanishMessage()">Spanish</button>
 <button (click)="frenchMessage()">French</button>
+<router-outlet></router-outlet>
